codespeak-lib (1.1.1-1) UNRELEASED; urgency=low

  * New upstream release.
  * Update manpages:
    - Remove py.rest manpage.

 -- Chris Lamb <lamby@debian.org>  Mon, 30 Nov 2009 23:46:11 +0000

codespeak-lib (1.0.2-2) unstable; urgency=low

  * Add missing dependency on python-pkg-resources (Closes: #550066)

 -- Chris Lamb <lamby@debian.org>  Thu, 08 Oct 2009 15:19:11 +0100

codespeak-lib (1.0.2-1) unstable; urgency=low

  * New upstream release.
  * Rebuild with newer debhelper. (Closes: #549374, #549675)
  * Clean extra LICENSE file to silence Lintian.

 -- Chris Lamb <lamby@debian.org>  Mon, 05 Oct 2009 17:35:57 +0100

codespeak-lib (1.0.1-2) unstable; urgency=low

  * Update py.test(1) manpage. (Closes: #545587)

 -- Chris Lamb <lamby@debian.org>  Tue, 08 Sep 2009 22:31:17 +0100

codespeak-lib (1.0.1-1) unstable; urgency=low

  * New upstream release. (Closes: #541437)
  * Vastly simplify packaging:
    - Package is now architecture independent
    - Move to debhelper 7
    - Drop entire patch series; applied upstream or not applicable to this
      version.
    - Move Docbook manpages under debian/manpages/
    - Drop ancient Replaces, etc.
  * Add manpages for py.which and py.svnwcrevert.
  * Update package short and long descriptions.
  * New maintainer email address.
  * Bump Standards-Version to 3.8.3.
  * Fix new upstream tarball location in debian/watch.
  * Add Vcs-{Git,Browser} headers to debian/control.

 -- Chris Lamb <lamby@debian.org>  Tue, 25 Aug 2009 02:57:21 +0100

codespeak-lib (0.9.1-3) unstable; urgency=low

  * Add patch to fix infinitely looping Subversion tests under Subversion
    1.5. (Closes: #489102)
  * Move to quilt patch system.
  * Add patch to make documentation generation during build more verbose.
  * Remove unnecessary Lintian overrides.
  * debian/control:
    - Replace some obsolete Suggests
    - Add Depends on ${misc:Depends}
    - Bump Standards-Version to 3.8.0.
